--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "init": "^0.1.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2"
   },
